Package: parallelly
===================

Version: 1.25.0-9001 [2021-06-06]

NEW FEATURES:

 * makeClusterPSOCK() now support setting up cluster nodes in parallel
   similarly to how parallel::makePSOCKcluster() does it.  This significantly
   reduces the setup turnaround time.  This is only supported in R (>= 4.0.0).
   To revert to the sequential setup strategy, set R option
   'parallelly.makeNodePSOCK.setup_strategy' to "sequential".

DOCUMENTATION:

 * Documenting more R options and environment variables used by this package.

BUG FIXES:

 * R option 'parallelly.availableCores.fallback' and environment variable
   'R_PARALLELLY_AVAILABLECORES_FALLBACK' was ignored since parallelly 1.22.0,
   when support for 'nproc' was added to availableCores().
 

Version: 1.25.0 [2021-04-30]

SIGNIFICANT CHANGES:

 * The default SSH client on MS Windows 10 is now the built in 'ssh' client.
   This means that regardless whether you are on Linux, macOS, or Windows 10,
   setting up parallel workers on external machines over SSH finally works out
   of the box without having to install PuTTY or other SSH clients. This was
   possible because a workaround was found for a Windows 10 bug preventing us
   from using reverse tunneling over SSH.  It turns out the bug reveals itself
   when using hostname 'localhost' but not '127.0.0.1', so we use the latter.
   
NEW FEATURES:
   
 * availableCores() gained argument 'omit' to make it easier to put aside
   zero or more cores from being used in parallel processing.  For example,
   on a system with four cores, availableCores(omit = 1) returns 3.
   Importantly, since availableCores() is guaranteed to always return a
   positive integer, availableCores(omit = 4) == 1, even on systems with
   four or fewer cores.  Using availableCores() - 4 on such systems would
   return a non-positive value, which would give an error downstream.

BUG FIXES:

 * makeClusterPSOCK(), or actually makeNodePSOCK(), did not accept all types