@@ -11,18 +11,18 @@ makeClusterPSOCK(
   port = c("auto", "random"),
   ...,
   autoStop = FALSE,
-  tries = getOptionOrEnvVar("parallelly.makeNodePSOCK.tries", 3L),
-  delay = getOptionOrEnvVar("parallelly.makeNodePSOCK.tries.delay", 15),
-  validate = getOptionOrEnvVar("parallelly.makeNodePSOCK.validate", TRUE),
-  verbose = getOptionOrEnvVar("parallelly.debug", FALSE)
+  tries = getOption2("parallelly.makeNodePSOCK.tries", 3L),
+  delay = getOption2("parallelly.makeNodePSOCK.tries.delay", 15),
+  validate = getOption2("parallelly.makeNodePSOCK.validate", TRUE),
+  verbose = getOption2("parallelly.debug", FALSE)
 )
 
 makeNodePSOCK(
   worker = "localhost",
   master = NULL,
   port,
-  connectTimeout = getOptionOrEnvVar("parallelly.makeNodePSOCK.connectTimeout", 2 * 60),
-  timeout = getOptionOrEnvVar("parallelly.makeNodePSOCK.timeout", 30 * 24 * 60 * 60),
+  connectTimeout = getOption2("parallelly.makeNodePSOCK.connectTimeout", 2 * 60),
+  timeout = getOption2("parallelly.makeNodePSOCK.timeout", 30 * 24 * 60 * 60),
   rscript = NULL,
   homogeneous = NULL,
   rscript_args = NULL,
@@ -30,20 +30,19 @@ makeNodePSOCK(
   rscript_libs = NULL,
   rscript_startup = NULL,
   methods = TRUE,
-  useXDR = getOptionOrEnvVar("parallelly.makeNodePSOCK.useXDR", FALSE),
+  useXDR = getOption2("parallelly.makeNodePSOCK.useXDR", FALSE),
   outfile = "/dev/null",
   renice = NA_integer_,
-  rshcmd = getOptionOrEnvVar("parallelly.makeNodePSOCK.rshcmd", NULL),
+  rshcmd = getOption2("parallelly.makeNodePSOCK.rshcmd", NULL),
   user = NULL,
   revtunnel = TRUE,
   rshlogfile = NULL,
-  rshopts = getOptionOrEnvVar("parallelly.makeNodePSOCK.rshopts", NULL),
+  rshopts = getOption2("parallelly.makeNodePSOCK.rshopts", NULL),
   rank = 1L,
   manual = FALSE,
   dryrun = FALSE,
   quiet = FALSE,
-  setup_strategy = getOptionOrEnvVar("parallelly.makeNodePSOCK.setup_strategy",
-    "parallel"),
+  setup_strategy = getOption2("parallelly.makeNodePSOCK.setup_strategy", "parallel"),
   action = c("launch", "options"),
   verbose = FALSE
 )
