@@ -6,26 +6,28 @@
 \alias{parallelly.availableCores.custom}
 \alias{parallelly.availableCores.methods}
 \alias{parallelly.availableCores.fallback}
-\alias{R_PARALLELLY_AVAILABLECORES_FALLBACK}
 \alias{parallelly.availableCores.omit}
-\alias{R_PARALLELLY_AVAILABLECORES_OMIT}
 \alias{parallelly.availableCores.system}
-\alias{R_PARALLELLY_AVAILABLECORES_SYSTEM}
 \alias{parallelly.availableWorkers.methods}
+\alias{parallelly.availableWorkers.custom}
 \alias{parallelly.fork.enable}
-\alias{R_PARALLELLY_FORK_ENABLE}
 \alias{parallelly.supportsMulticore.unstable}
+\alias{R_PARALLELLY_AVAILABLECORES_FALLBACK}
+\alias{R_PARALLELLY_AVAILABLECORES_OMIT}
+\alias{R_PARALLELLY_AVAILABLECORES_SYSTEM}
+\alias{R_PARALLELLY_FORK_ENABLE}
 \alias{R_PARALLELLY_SUPPORTSMULTICORE_UNSTABLE}
 \alias{future.availableCores.custom}
 \alias{future.availableCores.methods}
 \alias{future.availableCores.fallback}
-\alias{R_FUTURE_AVAILABLECORES_FALLBACK}
 \alias{future.availableCores.system}
-\alias{R_FUTURE_AVAILABLECORES_SYSTEM}
 \alias{future.availableWorkers.methods}
+\alias{future.availableWorkers.custom}
 \alias{future.fork.enable}
-\alias{R_FUTURE_FORK_ENABLE}
 \alias{future.supportsMulticore.unstable}
+\alias{R_FUTURE_AVAILABLECORES_FALLBACK}
+\alias{R_FUTURE_AVAILABLECORES_SYSTEM}
+\alias{R_FUTURE_FORK_ENABLE}
 \alias{R_FUTURE_SUPPORTSMULTICORE_UNSTABLE}
 \alias{parallelly.makeNodePSOCK.setup_strategy}
 \alias{parallelly.makeNodePSOCK.validate}
