@@ -3,6 +3,16 @@ Package: parallelly
 
 Version: 1.25.0-9001 [2021-06-06]
 
+SIGNIFICANT CHANGES:
+
+ * R_PARALLELLY_* (and R_FUTURE_*) environment variables are now only read
+   when the 'parallelly' package is loaded, where they set the corresponding
+   parallelly.* option.  Previously, some of these environment variables were
+   queried by different functions as a fallback to when an option was not set.
+   By only parsing them when the package is loaded, it decrease the overhead
+   in functions, and it clarifies that options can be changed at runtime
+   whereas environment variables should only be set at startup.
+   
 NEW FEATURES:
 
  * makeClusterPSOCK() now support setting up cluster nodes in parallel
